<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  <PreferenceCategory
      android:title="@string/pref_general_title"
      android:key="pref_general_settings">
    <ListPreference
        android:key="pref_general_orientation"
        android:title="@string/pref_general_orientation"
        android:dialogTitle="@string/pref_general_orientation"
        android:summary="@string/pref_general_orientation_summary"
        android:entries="@array/pref_general_orientation_entries"
        android:entryValues="@array/pref_general_orientation_values"
        android:defaultValue="LANDSCAPE" />
  </PreferenceCategory>
  <PreferenceCategory
      android:title="@string/pref_ping_title"
      android:key="pref_ping_settings">
    <CheckBoxPreference
        android:key="pref_ping_manual_host"
        android:title="@string/pref_ping_manual_host"
        android:summary="@string/pref_ping_manual_host_summary"
        android:defaultValue="false" />
    <EditTextPreference
        android:dependency="pref_ping_manual_host"
        android:key="pref_ping_url"
        android:title="@string/pref_ping_url"
        android:summary="@string/pref_ping_url_summary"
        android:defaultValue="http://192.168.116.1:8000/dashboards.json" />
    <EditTextPreference
        android:key="pref_ping_timeout"
        android:title="@string/pref_ping_timeout"
        android:summary="@string/pref_ping_timeout_summary"
        android:numeric="integer"
        android:maxLength="5"
        android:defaultValue="2000" />
    <EditTextPreference
        android:key="pref_ping_sleep"
        android:title="@string/pref_ping_sleep"
        android:summary="@string/pref_ping_sleep_summary"
        android:numeric="integer"
        android:maxLength="4"
        android:defaultValue="30" />
  </PreferenceCategory>
</PreferenceScreen>
